<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.st4s1k</groupId>
  <artifactId>league-team-comp</artifactId>
  <version>12.5.1</version>
  <packaging>jar</packaging>

  <name>LeagueTeamComp</name>

  <properties>
    <!-- project settings -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>17</java.version>
    <!-- dependencies -->
    <lombok.version>1.18.22</lombok.version>
    <gson.version>2.9.0</gson.version>
    <controlsfx.version>11.1.1</controlsfx.version>
    <javafx-fxml.version>17</javafx-fxml.version>
    <javafx-controls.version>17</javafx-controls.version>
    <!-- plugins -->
    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    <gluonfx.plugin.version>1.0.12</gluonfx.plugin.version>
    <javafx.plugin.version>0.0.8</javafx.plugin.version>
    <sortpom.plugin.version>3.0.1</sortpom.plugin.version>
  </properties>

  <dependencies>
    <!-- JavaFX -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx-controls.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>${javafx-fxml.version}</version>
    </dependency>
    <!-- Misc -->
    <dependency>
      <groupId>org.controlsfx</groupId>
      <artifactId>controlsfx</artifactId>
      <version>${controlsfx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>${gson.version}</version>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>Gluon</id>
      <url>https://nexus.gluonhq.com/nexus/content/repositories/releases</url>
    </repository>
  </repositories>

  <build>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>${javafx.plugin.version}</version>
        <configuration>
          <mainClass>com.st4s1k.leagueteamcomp.LeagueTeamCompApplication</mainClass>
        </configuration>
        <executions>
          <execution>
            <id>default-cli</id>
            <configuration>
              <mainClass>com.st4s1k.leagueteamcomp.LeagueTeamCompApplication</mainClass>
              <options>
                <option>-agentlib:native-image-agent=config-merge-dir=src/main/resources/META-INF/native-image</option>
                <option>--add-exports</option>
                <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                <option>--add-exports</option>
                <option>com.gluonhq.attach.util/com.gluonhq.attach.util.impl=com.st4s1k.leagueteamcomp</option>
                <option>--add-exports</option>
                <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
                <option>--add-exports</option>
                <option>com.gluonhq.attach.util/com.gluonhq.attach.util.impl=ALL-UNNAMED</option>
              </options>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>com.gluonhq</groupId>
        <artifactId>gluonfx-maven-plugin</artifactId>
        <version>${gluonfx.plugin.version}</version>
        <configuration>
          <verbose>true</verbose>
          <target>host</target>
          <mainClass>com.st4s1k.leagueteamcomp.LeagueTeamCompApplication</mainClass>
          <bundlesList>
            <list>com.st4s1k.leagueteamcomp.ltc-view</list>
          </bundlesList>
          <reflectionList>
            <list>com.st4s1k.leagueteamcomp.controller.LeagueTeamCompController</list>
          </reflectionList>
          <nativeImageArgs>
            <nativeImageArg>--allow-incomplete-classpath</nativeImageArg>
            <nativeImageArg>--add-exports</nativeImageArg>
            <nativeImageArg>javafx.base/com.sun.javafx.event=org.controlsfx.controls</nativeImageArg>
            <nativeImageArg>--add-exports</nativeImageArg>
            <nativeImageArg>com.gluonhq.attach.util/com.gluonhq.attach.util.impl=com.st4s1k.leagueteamcomp
            </nativeImageArg>
            <nativeImageArg>--add-exports</nativeImageArg>
            <nativeImageArg>javafx.base/com.sun.javafx.event=ALL-UNNAMED</nativeImageArg>
            <nativeImageArg>--add-exports</nativeImageArg>
            <nativeImageArg>com.gluonhq.attach.util/com.gluonhq.attach.util.impl=ALL-UNNAMED</nativeImageArg>
          </nativeImageArgs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>com.github.ekryd.sortpom</groupId>
        <artifactId>sortpom-maven-plugin</artifactId>
        <version>${sortpom.plugin.version}</version>
      </plugin>

    </plugins>
  </build>
</project>
